tests/paczka2/big_fuzzy/89493565.err
Error in line 1: A824 S872 1,7
Error in line 12: K7rP A98 37,5
Error in line 15: rpAn S872 52,8
Error in line 18: rpAn A98 40,1
Error in line 14: K7rP A47 5,7
Error in line 24: K7rP S872 277,6
Error in line 36: SI5Qkur9ef A98 43,7
Error in line 33: O6gJpv A98 80,0
Error in line 37: K7rP A824 28,1
Error in line 54: SI5Qkur9ef A824 3,6
Error in line 59: A824 A98 39,1
Error in line 79: K7rP A98 58,8
Error in line 76: rpAn A47 75,3
Error in line 81: K7rP A824 27,0
Error in line 88: p90 A47 52,2
Error in line 87: O6gJpv S872 74,0
Error in line 99: p90 A47 4,0
Error in line 86: A824 S872 182,0
Error in line 98: DhPJ A98 47,5
Error in line 102: K7rP A98 86,2
Error in line 103: rpAn S872 88,4
Error in line 115: SI5Qkur9ef S872 46,9
Error in line 109: DhPJ A47 42,4
Error in line 111: K7rP A47 48,2
Error in line 123: DhPJ A824 19,5
Error in line 148: K7rP A824 19,4
Error in line 169: p90 A98 81,07
Error in line 167: K7rP A98 56,0
Error in line 161: A824 A98 179,7
Error in line 176: K7rP A47 -2,3
Error in line 179: K7rP A47 92,4
Error in line 181: K7rP S872 64,4
Error in line 195: O6gJpv A(8 110,7
Error in line 166: p90 A98 49,8
Error in line 196: p90 A824 48,7
Error in line 200: A824 S872 449,5
Error in line 213: p9' A98 5,1
Error in line 216: A824 A47 -1,4
Error in line 215: A824 A47 60,9
Error in line 218: A824 A824 18,3
Error in line 222: O6gJpv A98 29,09
Error in line 219: A824 A47 21,3
Error in line 224: O6gJpv S872 68,5
Error in line 198: p90 A98 2,0
Error in line 236: p90 A47 35,7
Error in line 237: p90 S872 45,9
Error in line 239: p90 A98 99,7
